crates/plotnik-lib/tests/05-typegen/quantifiers/error_quantified_named_node_capture_needs_row.txt
Bad = (array (identifier) @name)*
==== diagnostics ====
error: the definition names the list itself, so each `*` element — a row of captures — is left without a type name
 --> query.ptk:1:7
  |
1 | Bad = (array (identifier) @name)*
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
help: name the element type in its own definition, then quantify a reference to it: `Elem = ...` and `(Elem)*`
